--- a/templates/joomla3c4s/config.json
+++ b/templates/joomla3c4s/config.json
@@ -392,7 +392,7 @@
 					"responsive": "medium"
 				},
 				"bottom-b": {
-					"layout": "parallel",
+					"layout": "stacked",
 					"responsive": "medium"
 				},
 				"bottom-c": {
